tests/marouter/errors/incomplete_connections/to_missing1of2/errors.marouter
Error: District '1' has no sink.
Error: Loading failed.
Quitting (on error).
